# cga_ik

./: CMakeLists.txt  README.md  package.xml
TM_kine_py/: cga.py  cga_fk.py  cga_ik.py  cga_ik_dev.py  cga_ik_grade.py  cga_ik_verify.py  cga_test.py  closed_ik.py  fk.py  num_ik.py  robot_dh.py  tm5-700-true-dh.urdf
TM_kine_py/TM_kinematics/: Frame.py  Robot.py  RobotSerial.py  RobotTrajectory.py  constrained_angle.py
config/: calculate_geometric_params.py  cobot_dh_table.yaml  colors.xacro  example_include.xacro  intertias.xacro  spherical_robot.urdf.xacro  spherical_robot_old.urdf.xacro  spherical_robot_params.yaml  spm_3dof.urdf.xacro  spm_3dof_params.yaml  spm_3dof_simplified.urdf.xacro  tm5-700.srdf.xacro  tm5-700.urdf.xacro
include/cga/: cga.hpp  cga_utils.hpp
include/cga_ik/: cga.hpp  cga_array.hpp  cga_array_utils.hpp  cga_ik.hpp  cga_utils.hpp
include/cga_ik_cobot_6dof/: cga_ik_cobot_6dof.hpp
include/cga_ik_spherical_robot/: cga_ik_spherical_robot.hpp  cga_ik_spherical_robot_wrt_base.hpp
include/cga_ik_spm_3dof/: cga_ik_spm_3dof.hpp  cga_ik_spm_3dof_wrt_base.hpp
launch/: cobot_6dof_rviz_config.rviz  control_spm.launch.py  spm_3dof_rviz_config.rviz  visualise_cobot_6dof.launch.py  visualise_robot_tf.launch.py  visualise_spherical_robot_tf.launch.py  visualise_spm_3dof.launch.py  visualise_spm_3dof_tf.launch.py
meshes/: base_plate.stl
meshes/spm_3dof/: arc_link_thin.stl  generate_arc_link_mesh.py  generate_plate_mesh.py  spm_base_plate.stl  spm_elbow_link.stl  spm_end_plate.stl  spm_motor_link.stl  spm_motor_link_with_pulley.stl
python/: cga_ik_dev.py  cga_ik_verify.py  cga_test.py
robot_descriptions/tm_description/xacro/: macro.gazebo.xacro  macro.tm12-nominal.urdf.xacro  macro.tm12x-nominal.urdf.xacro  macro.tm14-nominal.urdf.xacro  macro.tm14x-nominal.urdf.xacro  macro.tm5-700-nominal.urdf.xacro  macro.tm5-900-nominal.urdf.xacro  macro.tm5x-700-nominal.urdf.xacro  macro.tm5x-900-nominal.urdf.xacro  tm12.urdf.xacro  tm12x.urdf.xacro  tm14.urdf.xacro  tm14x.urdf.xacro  tm5-700.urdf.xacro  tm5-900.urdf.xacro  tm5x-700.urdf.xacro  tm5x-900.urdf.xacro
src/: cga_fk.cpp  cga_ik_spherical_robot_validate.cpp  cga_ik_validate.cpp  cga_test.cpp  spm_action_server.cpp  visualise_cobot_6dof.cpp  visualise_robot_tf.cpp  visualise_spherical_robot_tf.cpp  visualise_spherical_robot_tf_old.cpp  visualise_spm_3dof.cpp  visualise_spm_3dof_non_oo.cpp  visualise_spm_3dof_tf.cpp
visual_kinematics/examples/: forward.py  inverse.py  trajectory.py
